# SnapScribe

./: .gitignore  LICENSE  README.md  featureIdeas  main.py  poetry.lockbak  pyproject.toml  requirements.txt  settings.json
logic/: backend.py  hotkeys.py
ui/: i18n.py  main_window.py  settings_dialog.py  splash.py  visualizer.py  widgets.py
