[project]
name = "snapscribe"
version = "0.1.0"
description = "A fast, lightweight tool to record and transcribe audio instantly using Whisper."
authors = [
    {name = "LANGENKÄMPER Florian",email = "florian.langenkaemper@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
    "sounddevice",
    "soundfile",
    "numpy",
    "pyperclip",
    "keyboard",
    "PyQt6",
    "openai",
    "requests",
    "faster-whisper",
    "pyinstaller (>=6.0) ; python_version >= \"3.10\" and python_version < \"3.15\"",
    "pillow (>=12.1.0,<13.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false